--- a/src/Row.css
+++ b/src/Row.css
@@ -3,7 +3,7 @@
     object-fit: contain;
     max-height: 100px;
     transition: transform 450ms;
-    margin-right: 75px;
+    margin-right: 185px;
 
 }
 .row_posters{
@@ -17,4 +17,15 @@
 }
 .row_poster:hover{
     transform: scale(1.08);
+}
+.row_posterLarge{
+  max-height: 250px;
+  margin-right: 180px;
+}
+.row_posterLarge:hover{
+    transform: scale(1.09); 
+}
+.row{
+    margin-left: 20px;
+    color: white;
 }
